--- a/Lesson_8/HW_8/css/style.css
+++ b/Lesson_8/HW_8/css/style.css
@@ -29,7 +29,7 @@ main {
   width: 300px;
   padding: 16px;
   border: 1px solid #ccc;
-  background-color: #f9f9f9;
+  background-color: #eeb38f;
   position: relative;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
 }
