--- a/Lesson_11/HW_11/css/style.css
+++ b/Lesson_11/HW_11/css/style.css
@@ -7,12 +7,12 @@ body {
     display: flex;
     justify-content: center;
     gap: 20px;
-    background: #f0f0f0;
+    background: #2477eb;
     padding: 15px;
 }
 .menu-item{
 text-decoration: none;
-color: #1345af;
+color: #eeeff0;
 font-size: 16px;
 }
 
@@ -44,5 +44,6 @@ font-size: 16px;
         padding: 10px;
         font-size: 12px;
         border-bottom: 1px solid #1345af;
+        text-decoration: underline;
     }
 }
