--- a/Lesson_11/HW_11/css/style.css
+++ b/Lesson_11/HW_11/css/style.css
@@ -5,8 +5,8 @@ body {
 
 .menu{
     display: flex;
-    justify-content: center;
-    gap: 20px;
+    justify-content: space-around;
+  
     background: #2477eb;
     padding: 15px;
 }
