--- a/Lesson_11/HW_11/css/style.css
+++ b/Lesson_11/HW_11/css/style.css
@@ -6,7 +6,6 @@ body {
 .menu{
     display: flex;
     justify-content: space-around;
-  
     background: #2477eb;
     padding: 15px;
 }
@@ -40,10 +39,10 @@ font-size: 16px;
     }
     .menu-item{
         display: block;
-        text-align: center;
+        text-align: left;
         padding: 10px;
         font-size: 12px;
         border-bottom: 1px solid #1345af;
-        text-decoration: underline;
+        text-decoration: underline white;
     }
 }
