--- a/Lesson_16/HW_16/css/style.css
+++ b/Lesson_16/HW_16/css/style.css
@@ -1,37 +1,39 @@
-html, body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  font-family: Arial, sans-serif;
+html,
+body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    font-family: Arial, sans-serif;
 }
 
 /* Контейнер на всю страницу */
 .page {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  background: #fff;
-  overflow: hidden;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    overflow: hidden;
 }
 
 /* Текст внутри страницы */
 .text {
-  padding: 40px;
-  line-height: 1.6;
-  color: #222;
-  font-size: 18px;
-  position: relative;
-  z-index: 1;
+    padding: 40px;
+    line-height: 1.6;
+    color: #222;
+    font-size: 18px;
+    position: relative;
+    z-index: 1;
 }
 
 /* Занавеска */
 .curtain {
-  position: absolute;
-  top: 0;          /* старт с самого верха */
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #2c3e50;
-  z-index: 2;
-  transition: top 0.5s ease;
+    position: absolute;
+    top: 0;
+    /* старт с самого верха */
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    z-index: 2;
+    transition: top 0.5s ease;
 }
